Exp-1/output/f00350_load_metric_test.err
  File "output/f00350_load_metric_test.py", line 3
    import assert
           ^
SyntaxError: invalid syntax
